src/span/snapshots/hebi__span__tests__emit_report_single_line.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\",\n        10..11).report(\"let x = 10\\nlet y = 20;\", true)"
---
error: test
| let x = 10[4;31m_[0mlet y = 20;

