src/span/snapshots/hebi__span__tests__snippet_multi_line-3.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\", 1..3).report(\"\\n\\\\n\", true)"
---
error: test
| [4;31m\n[0m

