src/span/snapshots/hebi__span__tests__snippet_multi_line-4.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\", 19..19).report(\"d(                 \", true)"
---
error: test
