src/span/snapshots/hebi__span__tests__snippet_multi_line-5.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\", 4..6).report(\"\\u{9389a}\\\"\\n\", true)"
---
error: test
| 򓢚[4;31m"[0m

