src/span/snapshots/hebi__span__tests__snippet_multi_line-6.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\", 0..2).report(\"x \", true)"
---
error: test
| [4;31mx [0m

