src/span/snapshots/hebi__span__tests__snippet_multi_line-7.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\", 0..2).report(\"З  \", true)"
---
error: test
| [4;31mЗ[0m

