src/span/snapshots/hebi__span__tests__snippet_multi_line-8.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\", 0..2).report(\"\\\"\\n\\\\\", true)"
---
error: test
| [4;31m"[0m\

